--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -3,10 +3,10 @@ name: GCC
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 env:
   VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
