--- a/.github/workflows/msvc2019.yml
+++ b/.github/workflows/msvc2019.yml
@@ -3,10 +3,10 @@ name: MSVC 2019
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 env:
   VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
