--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -23,6 +23,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
+      - name: Prepare system
+        run: |
+          sudo apt install -y libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev pkg-config
+
       - name: Install Compiler
         run: |
           sudo apt-get update 
