--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -23,6 +23,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
+      - name: Prepare system
+        run: |
+          sudo apt install -y libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev pkg-config
+
       - name: Install compiler
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
