--- a/.github/workflows/msvc2019.yml
+++ b/.github/workflows/msvc2019.yml
@@ -2,11 +2,9 @@ name: MSVC 2019
 
 on:
   push:
-    branches:
-      - master
+    branches: [ $default-branch ]
   pull_request:
-    branches:
-      - master
+    branches: [ $default-branch ]
 
 jobs:
   build-and-test:
