--- a/.github/workflows/msvc2019.yml
+++ b/.github/workflows/msvc2019.yml
@@ -2,9 +2,11 @@ name: MSVC 2019
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+      - master
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - master
 
 jobs:
   build-and-test:
