install missing dependency

--- a/.github/workflows/deployment.trunk.yml
+++ b/.github/workflows/deployment.trunk.yml
@@ -37,6 +37,7 @@ jobs:
         ./vcpkg install nlohmann-json:wasm32-emscripten
         ./vcpkg install entt:wasm32-emscripten
         ./vcpkg install raylib:wasm32-emscripten
+        ./vcpkg install michaelmiller-sec21:wasm32-emscripten
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
