--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -1,4 +1,4 @@
-name: MSVC 2019
+name: MSVC
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: windows-2019
+    runs-on: windows-latest
 
     strategy:
       matrix:
