--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        version: [ 16, 17, 18 ]
+        version: [ 17, 18 ]
         config: [ Release ]
 
     steps:
