update clang version

--- a/.github/workflows/clang.yml
+++ b/.github/workflows/clang.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        version: [ 17, 18 ]
+        version: [ 18, 19, 20 ]
         config: [ Release ]
 
     steps:
