--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,6 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}) # ensure that the directory exists
 
-configure_file(src/config.h.in ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/config.h)
-
 add_executable(orpg)
 enable_warnings(orpg)
 
@@ -52,6 +50,9 @@ target_include_directories(orpg
 
 # Default is: Desktop build
 target_compile_definitions(orpg PRIVATE ORPG_DESKTOP_BUILD)
+
+get_target_property(BINARY_NAME orpg NAME)
+configure_file(src/config.h.in ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/config.h @ONLY)
 
 if (EMSCRIPTEN)
   message(STATUS "Emscripten build")
