--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,7 +1,9 @@
 #pragma once
 
+#include <string_view>
+
 #define VERSION_MAJOR @orpg_VERSION_MAJOR@
 #define VERSION_MINOR @orpg_VERSION_MINOR@
 
-constexpr char EXECUTABLE_NAME[] = "@PROJECT_NAME@";
-constexpr char BINARY_DIRECTORY[] = "@PROJECT_BINARY_DIR@";
+inline constexpr std::string_view ORPG_BINARY_NAME = "@BINARY_NAME@";
+inline constexpr std::string_view ORPG_BINARY_DIRECTORY = "@CMAKE_RUNTIME_OUTPUT_DIRECTORY@";
